testing/errors/subst3.a
	*=$1000
		lda sub	; sub is undefined
base?sub	nop	; -> "undefined or not integer"
